@@ -390,6 +390,7 @@
                         <param name="label" value="$LOCALIZE[31365]" />
                         <param name="content" value="$VAR[Defs_VideoInfo_Images]" />
                         <param name="content2" value="$VAR[Defs_VideoInfo_Images2]" />
+                        <param name="content3" value="$VAR[Defs_VideoInfo_Images3]" />
                         <param name="infolabel" value="false" />
                         <param name="itemwidth" value="606.66" />
                         <param name="showfocuslabel" value="false" />
