@@ -1,4 +1,5 @@
 [B]0.9.19[/B]
+LEIA - Add artwork beef artwork helper support in videoinfodialog
 Fix settings widget focus text
 
 [B]0.9.18[/B]
